# runtime

./: Cargo.toml  Dockerfile  README.md  RELEASES.md  clippy.toml  compose.yaml  deny.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yaml
crates/wasi-keyvalue-nats/src/: lib.rs
crates/wasi-messaging-nats/src/: host.rs  lib.rs
crates/wasi-vault-az/: Cargo.toml
crates/wasi-vault-az/src/: lib.rs
examples/http/: Cargo.toml
src/: main.rs  minimal.rs  standard.rs
supply-chain/: audits.toml  config.toml
