
[package]
name = "wasm-cli"
description = "Wasm runtime"
readme = "README.md"
default-run = "standard"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "standard"
path = "src/standard.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[dependencies]
anyhow.workspace = true
res-azkeyvault.workspace = true
res-mongodb.workspace = true
res-nats.workspace = true
runtime.workspace = true
tokio.workspace = true
wasi-blobstore-mdb.workspace = true
wasi-http.workspace = true
wasi-keyvalue-nats.workspace = true
wasi-messaging-nats.workspace = true
wasi-otel.workspace = true
wasi-vault-az.workspace = true

[profile.release]
lto = true
opt-level = "s"
strip = true

[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["wasm", "wasi", "runtime"]
edition = "2024"
homepage = "https://credibil.io"
keywords = ["decentralized", "identity"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil-grid/runtime"
rust-version = "1.90"
version = "0.5.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
# missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
async-nats = { version = "0.42.0" }                                                               # features = ["form", "json", "query", "tracing"]
azure_core = { version = "0.27.0", default-features = false, features = ["reqwest_rustls"] }
azure_identity = { version = "0.27.0", default-features = false }
azure_security_keyvault_secrets = { version = "0.6.0", default-features = false }
base64ct = { version = "1.8.0", features = ["std"] }
bytes = "1.10.1"
cfg-if = "1.0.3"
chrono = "0.4.42"
futures = "0.3.31"
http = "1.3.1"
mongodb = { version = "3.3.0" }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_metrics_custom_reader"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.47.1", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wasi = "0.14.7"
wasmtime = { version = "37.0.0", default-features = false, features = ["component-model-async"] }
wasmtime-wasi = { version = "37.0.0", features = ["p3"] }
wasmtime-wasi-http = { version = "37.0.0", features = ["p3"] }
wasmtime-wasi-io = "37.0.0"

credibil-otel = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
runtime = { git = "https://github.com/credibil/wrt", tag = "v0.5.0" }
wasi-http = { git = "https://github.com/credibil/wrt", tag = "v0.5.0" }
wasi-otel = { git = "https://github.com/credibil/wrt", tag = "v0.5.0" }

res-azkeyvault = { path = "crates/res-azkeyvault" }
res-mongodb = { path = "crates/res-mongodb" }
res-nats = { path = "crates/res-nats" }
wasi-blobstore-mdb = { path = "crates/wasi-blobstore-mdb" }
wasi-keyvalue-nats = { path = "crates/wasi-keyvalue-nats" }
wasi-messaging-nats = { path = "crates/wasi-messaging-nats" }
wasi-vault-az = { path = "crates/wasi-vault-az" }

# [patch."https://github.com/credibil/core.git"]
# credibil-otel = { path = "../../credibil/core/crates/otel" }
