[package]
name = "http"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
sdk-http = { git = "https://github.com/credibil/tempo", tag = "v0.2.0" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasi.workspace = true
