[package]
name = "http-ex"
description = "Example wasm guest using wasi:http"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["json"] }
sdk-http = { git = "https://github.com/credibil/wrt", tag = "v0.5.2" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasi.workspace = true
